--- a/requirements.txt
+++ b/requirements.txt
@@ -1,182 +1,18 @@
-aiofiles @ file:///croot/aiofiles_1683773582346/work
-aiohttp==3.8.6
-aiosignal==1.3.1
-aiosqlite @ file:///croot/aiosqlite_1683773899903/work
-annotated-types==0.5.0
+annotated-types==0.6.0
 anyio==3.7.1
-argon2-cffi @ file:///opt/conda/conda-bld/argon2-cffi_1645000214183/work
-argon2-cffi-bindings @ file:///work/ci_py311/argon2-cffi-bindings_1676823553406/work
-asttokens @ file:///opt/conda/conda-bld/asttokens_1646925590279/work
-async-timeout==4.0.3
-attrs @ file:///work/ci_py311/attrs_1676822758931/work
-Babel @ file:///work/ci_py311/babel_1676825020543/work
-backcall @ file:///home/ktietz/src/ci/backcall_1611930011877/work
-beautifulsoup4 @ file:///croot/beautifulsoup4-split_1681493039619/work
-bleach @ file:///opt/conda/conda-bld/bleach_1641577558959/work
-boltons @ file:///work/ci_py311/boltons_1677685195580/work
-Bottleneck @ file:///work/ci_py311/bottleneck_1676827011612/work
-brotlipy==0.7.0
-build @ file:///croot/python-build_1679596508056/work
-CacheControl @ file:///work/ci_py311/cachecontrol_1676823134806/work
-certifi @ file:///croot/certifi_1690232220950/work/certifi
-cffi @ file:///work/ci_py311/cffi_1676822533496/work
-chardet==3.0.4
-charset-normalizer @ file:///tmp/build/80754af9/charset-normalizer_1630003229654/work
-cleo @ file:///croot/cleo_1679609976041/work
+bcrypt==4.0.1
 click==8.1.7
-comm @ file:///work/ci_py311/comm_1677709131612/work
-conda @ file:///croot/conda_1692724491024/work
-conda-content-trust @ file:///work/ci_py311/conda-content-trust_1676851327497/work
-conda-libmamba-solver @ file:///croot/conda-libmamba-solver_1685032319139/work/src
-conda-package-handling @ file:///croot/conda-package-handling_1685024767917/work
-conda_package_streaming @ file:///croot/conda-package-streaming_1685019673878/work
-crashtest @ file:///croot/crashtest_1679422372509/work
-cryptography @ file:///croot/cryptography_1686613057838/work
-debugpy @ file:///croot/debugpy_1690905042057/work
-decorator @ file:///opt/conda/conda-bld/decorator_1643638310831/work
-defusedxml @ file:///tmp/build/80754af9/defusedxml_1615228127516/work
-distlib @ file:///croot/distlib_1678983657005/work
-dulwich @ file:///croot/dulwich_1679420040193/work
-encode==0.0.0
-entrypoints @ file:///work/ci_py311/entrypoints_1676823319002/work
-exceptiongroup==1.1.3
-executing @ file:///opt/conda/conda-bld/executing_1646925071911/work
-fastapi==0.103.1
-fastjsonschema @ file:///work/ci_py311_2/python-fastjsonschema_1679340124475/work
-filelock @ file:///work/ci_py311/filelock_1676823024085/work
-frozenlist==1.4.0
-greenlet==2.0.2
-h11==0.8.1
-h2==3.2.0
-hpack==3.0.0
-html5lib @ file:///Users/ktietz/demo/mc3/conda-bld/html5lib_1629144453894/work
-hyperframe==5.2.0
+fastapi==0.103.2
+greenlet==3.0.0
+h11==0.14.0
 idna==3.4
-importlib-metadata @ file:///croot/importlib-metadata_1678997070253/work
-installer @ file:///croot/python-installer_1679432998036/work
-ipykernel @ file:///croot/ipykernel_1691121631942/work
-ipython @ file:///croot/ipython_1691532092695/work
-ipython-genutils @ file:///tmp/build/80754af9/ipython_genutils_1606773439826/work
-ipywidgets @ file:///croot/ipywidgets_1679394798311/work
-jaraco.classes @ file:///tmp/build/80754af9/jaraco.classes_1620983179379/work
-jedi @ file:///work/ci_py311_2/jedi_1679336495545/work
-jeepney @ file:///tmp/build/80754af9/jeepney_1627537048313/work
-Jinja2 @ file:///work/ci_py311/jinja2_1676823587943/work
-json5 @ file:///tmp/build/80754af9/json5_1624432770122/work
-jsonpatch @ file:///tmp/build/80754af9/jsonpatch_1615747632069/work
-jsonpointer==2.1
-jsonschema @ file:///croot/jsonschema_1678983421637/work
-jupyter @ file:///work/ci_py311/jupyter_1676837039433/work
-jupyter-console @ file:///croot/jupyter_console_1679999630278/work
-jupyter-events @ file:///croot/jupyter_events_1684268042853/work
-jupyter-server @ file:///work/ci_py311/jupyter_server_1676824947163/work
-jupyter-ydoc @ file:///croot/jupyter_ydoc_1683747223142/work
-jupyter_client @ file:///work/ci_py311/jupyter_client_1676823491351/work
-jupyter_core @ file:///croot/jupyter_core_1679906564508/work
-jupyter_server_fileid @ file:///croot/jupyter_server_fileid_1684273577568/work
-jupyter_server_ydoc @ file:///croot/jupyter_server_ydoc_1686767404829/work
-jupyterlab @ file:///croot/jupyterlab_1686179668131/work
-jupyterlab-pygments @ file:///tmp/build/80754af9/jupyterlab_pygments_1601490720602/work
-jupyterlab-widgets @ file:///croot/jupyterlab_widgets_1679055282532/work
-jupyterlab_server @ file:///croot/jupyterlab_server_1680792501448/work
-jwt==1.3.1
-keyring @ file:///croot/keyring_1678999217139/work
-libmambapy @ file:///croot/mamba-split_1685993156657/work/libmambapy
-lockfile==0.12.2
-lxml @ file:///croot/lxml_1679646450407/work
-MarkupSafe @ file:///work/ci_py311/markupsafe_1676823507015/work
-matplotlib-inline @ file:///work/ci_py311/matplotlib-inline_1676823841154/work
-mistune @ file:///work/ci_py311/mistune_1676823698136/work
-mkl-fft==1.3.6
-mkl-random @ file:///work/mkl/mkl_random_1682950433854/work
-mkl-service==2.4.0
-more-itertools @ file:///tmp/build/80754af9/more-itertools_1637733554872/work
-msgpack @ file:///work/ci_py311/msgpack-python_1676823037805/work
-multidict==6.0.4
-nbclassic @ file:///croot/nbclassic_1681756170010/work
-nbclient @ file:///work/ci_py311/nbclient_1676823713954/work
-nbconvert @ file:///work/ci_py311/nbconvert_1676823854564/work
-nbformat @ file:///work/ci_py311/nbformat_1676823523130/work
-nest-asyncio @ file:///work/ci_py311/nest-asyncio_1676823382924/work
-notebook @ file:///croot/notebook_1690984815942/work
-notebook_shim @ file:///work/ci_py311/notebook-shim_1676825053954/work
-numexpr @ file:///croot/numexpr_1683221822650/work
-numpy @ file:///croot/numpy_and_numpy_base_1691091611330/work
-openai==0.28.1
-packaging @ file:///croot/packaging_1678965309396/work
-pandas @ file:///croot/pandas_1692289311655/work
-pandocfilters @ file:///opt/conda/conda-bld/pandocfilters_1643405455980/work
-parso @ file:///opt/conda/conda-bld/parso_1641458642106/work
-pexpect @ file:///tmp/build/80754af9/pexpect_1605563209008/work
-pickleshare @ file:///tmp/build/80754af9/pickleshare_1606932040724/work
-pkginfo @ file:///croot/pkginfo_1679431160147/work
-platformdirs @ file:///work/ci_py311/platformdirs_1676823055788/work
-pluggy @ file:///work/ci_py311/pluggy_1676822818071/work
-ply==3.11
-poetry @ file:///croot/poetry_1680193142998/work
-poetry-core @ file:///croot/poetry-core_1680018645313/work
-poetry-plugin-export @ file:///croot/poetry-plugin-export_1680122784541/work
-prometheus-client @ file:///work/ci_py311_2/prometheus_client_1679340520168/work
-prompt-toolkit @ file:///work/ci_py311/prompt-toolkit_1676824857154/work
-psutil @ file:///work/ci_py311_2/psutil_1679337388738/work
 psycopg2==2.9.9
-ptyprocess @ file:///tmp/build/80754af9/ptyprocess_1609355006118/work/dist/ptyprocess-0.7.0-py2.py3-none-any.whl
-pure-eval @ file:///opt/conda/conda-bld/pure_eval_1646925070566/work
-pycosat @ file:///work/ci_py311/pycosat_1676838522308/work
-pycparser @ file:///tmp/build/80754af9/pycparser_1636541352034/work
-pydantic==2.3.0
-pydantic_core==2.6.3
-Pygments @ file:///croot/pygments_1684279966437/work
-pyOpenSSL @ file:///croot/pyopenssl_1678965284384/work
-pyproject_hooks @ file:///croot/pyproject_hooks_1679584411881/work
-PyQt5-sip==12.11.0
-pyrsistent @ file:///work/ci_py311/pyrsistent_1676823088752/work
-PySocks @ file:///work/ci_py311/pysocks_1676822712504/work
-python-dateutil @ file:///tmp/build/80754af9/python-dateutil_1626374649649/work
+psycopg2-binary==2.9.9
+pydantic==2.4.2
+pydantic_core==2.10.1
 python-dotenv==1.0.0
-python-json-logger @ file:///croot/python-json-logger_1683823803357/work
-pytz @ file:///work/ci_py311/pytz_1676825004346/work
-PyYAML @ file:///work/ci_py311/pyyaml_1676827445582/work
-pyzmq @ file:///work/ci_py311/pyzmq_1676918885689/work
-qtconsole @ file:///croot/qtconsole_1681394213385/work
-QtPy @ file:///work/ci_py311/qtpy_1676827467989/work
-rapidfuzz @ file:///croot/rapidfuzz_1679593470109/work
-requests @ file:///croot/requests_1682607517574/work
-requests-toolbelt @ file:///Users/ktietz/demo/mc3/conda-bld/requests-toolbelt_1629456163440/work
-rfc3339-validator @ file:///croot/rfc3339-validator_1683077044675/work
-rfc3986==1.5.0
-rfc3986-validator @ file:///croot/rfc3986-validator_1683058983515/work
-ruamel.yaml @ file:///work/ci_py311/ruamel.yaml_1676838772170/work
-SecretStorage @ file:///work/ci_py311_2/secretstorage_1679339060489/work
-Send2Trash @ file:///tmp/build/80754af9/send2trash_1632406701022/work
-shellingham @ file:///work/ci_py311/shellingham_1676823205451/work
-sip @ file:///work/ci_py311/sip_1676825117084/work
-six @ file:///tmp/build/80754af9/six_1644875935023/work
 sniffio==1.3.0
-soupsieve @ file:///croot/soupsieve_1680518478486/work
-SQLAlchemy==2.0.21
-stack-data @ file:///opt/conda/conda-bld/stack_data_1646927590127/work
+SQLAlchemy==2.0.22
 starlette==0.27.0
-terminado @ file:///work/ci_py311/terminado_1677696151350/work
-tinycss2 @ file:///work/ci_py311/tinycss2_1676823757641/work
-toml @ file:///tmp/build/80754af9/toml_1616166611790/work
-tomlkit @ file:///work/ci_py311/tomlkit_1676823218885/work
-toolz @ file:///work/ci_py311/toolz_1676827522705/work
-tornado @ file:///croot/tornado_1690848263220/work
-tqdm @ file:///croot/tqdm_1679561862951/work
-traitlets @ file:///work/ci_py311/traitlets_1676823305040/work
-trove-classifiers @ file:///croot/trove-classifiers_1679610028660/work
 typing_extensions==4.8.0
-tzdata @ file:///croot/python-tzdata_1690578112552/work
-urllib3 @ file:///croot/urllib3_1686163155763/work
 uvicorn==0.23.2
-virtualenv @ file:///croot/virtualenv_1679038251432/work
-wcwidth @ file:///Users/ktietz/demo/mc3/conda-bld/wcwidth_1629357192024/work
-webencodings==0.5.1
-websocket-client @ file:///work/ci_py311/websocket-client_1676824890004/work
-widgetsnbextension @ file:///croot/widgetsnbextension_1679313860248/work
-y-py @ file:///croot/y-py_1683555143488/work
-yarl==1.9.2
-ypy-websocket @ file:///croot/ypy-websocket_1684171737040/work
-zipp @ file:///work/ci_py311/zipp_1676822894295/work
-zstandard @ file:///work/ci_py311_2/zstandard_1679339489613/work
